# shaftExchange

./: CMakeLists.txt  README.md  README.txt  closeGripper_franka.cpp  detection_aspirazione_franka.cpp  detection_aspirazione_franka_old.cpp  detection_scarico_franka.cpp  graspAspirazione_franka.cpp  graspScarico_franka.cpp  moveCobot_franka.cpp  moveCobot_franka_disAsp.cpp  moveCobot_franka_old.cpp  openGripper_franka.cpp
include/: Model_uca_2.h  Tensor_uca_2.h  dynModel_uca_2.h  utils_cam_uca_2.hpp  utils_uca_2.hpp
resources/: graspMeasuredPoseAspirazione.txt  graspMeasuredPoseScarico.txt  initPose.txt  initPose_joint.txt  peso.txt  shaft.txt  shaft_corto.txt  shaft_falsi.txt  shaft_lungo.txt
src/: Model_uca_2.cpp  Tensor_uca_2.cpp  common_uca_2.cpp  dynModel_uca_2.cpp
